--- a/eHAA Challenge/MODULE 02_HTML_JS_JAVASCRIPT BASICS/2_Grade Calculator_JAVASCRIPT CONDITIONALS.html
+++ b/eHAA Challenge/MODULE 02_HTML_JS_JAVASCRIPT BASICS/2_Grade Calculator_JAVASCRIPT CONDITIONALS.html
@@ -11,13 +11,17 @@
     var score = prompt('Entre your score');
     if (score >= 70 && score <= 100) {
         alert('Grade A');
+    }  else if (score > 60 && score < 70) {
+        alert('Grade Undeclared');
     } else if (score >=50 && score <=60) {
         alert('Grade C');
+    } else if (score >40 && score <50) {
+        alert('Grade Undeclared');
     } else if (score <=40) {
         alert('Grade F');
     } else if (score >100) {
         alert("value inaproppriate 'Re-type your score'");
-    }   
+    }     
     </script>
     
 </body>
